devops/istio/dr.yaml
# here we define the subsets, to what pods should the traffic go to
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule 
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  subsets:
  - name: v1
    labels:
      version: A #version is from the deployment.yaml file
  - name: v2
    labels:
      version: B
