devops/istio/fault-injection.yaml

#consisten hash is used to route the traffic to the same pod, based on the header value
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService 
metadata:
  name: nginx-vs
spec:
  hosts:
  - nginx-service #is from the service configuration from deployment.yaml
  http:
    - fault:
        delay:
          fixedDelay: 10s
          percentage: 
            value: 100
      route:
      - destination:
          host: nginx-service
          subset: all

---

# here we define the subsets, to what pods should the traffic go to
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule 
metadata:
  name: nginx-dr
spec:
  host: nginx-service 
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "x-user"
  subsets:
  - name: all
    labels:
      app: nginx
