devops/istio/ingress-gateway-domains.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway 
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.fullcycle"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService 
metadata:
  name: nginx-vs
spec:
  hosts:
  - "a.fullcycle"
  gateways:
  - ingress-gateway-k3s
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v1

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService 
metadata:
  name: nginx-vs-b
spec:
  hosts:
  - "b.fullcycle"
  gateways:
  - ingress-gateway-k3s
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v2
