devops/istio/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway 
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

#for tests we can change the port to 30000 to match the nodeport from our deployment
#kubectl patch svc istio-ingressgateway -n istio-system -p '{"spec": {"ports": [{"port": 80,"nodePort": 30000,"name": "http2"}]}}'

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService 
metadata:
  name: nginx-vs
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway-k3s
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v1 #this subset is from the destination rule dr.yaml file
        weight: 50
      - destination:
          host: nginx-service
          subset: v2
        weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule 
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: A #version is from the deployment.yaml file
    trafficPolicy:
      loadBalancer:
        simple: LEAST_CONN
  - name: v2
    labels:
      version: B
